--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="Css/head-content.css">
+  <link rel="stylesheet" href="Css/header.css">
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
@@ -27,15 +29,13 @@
              <a href="#"><button class="btn2">Knapp 2</button></a>
             
             </div> 
-            <div class="right">
-              <img class="right-img" src="Images/Pikachu.png" alt="Pikachu">
-
-            </div>
+            <img class="right-img" src="Images/Pikachu.png" alt="Pikachu">
+            <a href="#"><button class="btn-menu">Menu</button></a>
             </div>
         </section>
   </main>
-
   <footer>
+    
   </footer>
 
 </body>
