--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           <div class="grid">
             
             <div class="left">
+              <img class="gif">
              <a href=""><img class="logo" src="Images/logo-removebg-preview.png" alt="Logo"></a>
               <h1>Pokoemon Mac and Cheese</h1>
              
