--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- !Css -->
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="Css/head-content.css">
+  <!-- !Css -->
+  <link rel="stylesheet" href="Css/style.css">
+  <link rel="stylesheet" href="Css/loading.css">
   <link rel="stylesheet" href="Css/header.css">
+  <link rel="stylesheet" href="Css/head-content.css">
+  <link rel="stylesheet" href="Css/box.css">
   <link rel="stylesheet" href="Css/footer.css">
+
+<!-- !Js -->
 
 <script defer src="loader.js"></script>
 
@@ -17,10 +21,15 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,400;0,500;1,300;1,400&display=swap" rel="stylesheet">
+
+<!-- !Img -->
 <link rel="shortcut icon" type="image/png" href="Images/Pikachu.png">
 
   <title>Tannuki — Home</title>
 </head>
+
 <body onload="timer()">
 
   <!-- !Loading Screen -->
@@ -29,8 +38,10 @@
     <h1>Loading...</h1>
   </div>
 
+  <!-- !Header -->
   <main id="main"  class="animate-bottom">
 
+    <!-- !Section1 -->
   <section class="head-content">
       <div class="grid">
               
@@ -47,11 +58,27 @@
             <img class="right-img" src="Images/Pikachu.png" alt="Pikachu">
          </div>
     </section>
+    
+        <!-- !Section 2 -->
+   <section class="box-content">
+    <div class="grid">
+      <img class="img" src="Images/Pikachu.png" alt="Pikachu">
+    </div> 
+    </section>
+
+<!-- !Section 3 -->   
+  
+<section class="head-content">
+    <div class="grid">
+      <img class="right-img" src="Images/Pikachu.png" alt="Pikachu">
+    </div> 
+    </section>
 
   </main>
 
   <footer id="footer"  class="animate-bottom">
     <section class="footer-content">
+      <a href="#" class="top"><img src="Images/arrow.gif" alt="Gif"></a>
       <img class="footer-right" src="Images/attack2.gif" alt="Gif">
       <a href=""><img class="footer-mid" src="Images/logo-removebg-preview.png" alt="Logo"></a>
       <div class="footer-left">
@@ -62,6 +89,7 @@
     </section>
 
   </footer>
+
 
 </body>
 </html>
