--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- !Css -->
-  <link rel="stylesheet" href="Css/style.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="Css/loading.css">
   <link rel="stylesheet" href="Css/header.css">
   <link rel="stylesheet" href="Css/head-content.css">
