--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
   <!-- !Loading Screen -->
   <div id="loader">
-    <img  class="loader-img" src="Images/Loading.gif" alt="Loading Screen" />
-    <h1>Loading...</h1>
+    <img  class="loader-gif" src="Images/loading-gif.gif" alt="Loading Screen" />
+    <!-- <img  class="loader-gif" src="Images/loader.gif" alt="Loading Screen" /> -->
   </div>
 
   <!-- !Header -->
@@ -54,7 +54,7 @@
    
              </div> 
              <img class="right-img" src="Images/Pikachu.png" alt="Pikachu">
-             <a href="#"><button class="btn-menu">knapp 2</button></a>
+             <a href="#"><button class="btn-menu">Menu</button></a>
          </div>
     </section>
     
