--- a/index.html
+++ b/index.html
@@ -62,22 +62,19 @@
     <ul>
       <button class="menu1">Menu</button>
         <li>
-          <a href="#">1</a>
+          <a href="#">Home</a>
         </li>
         <li>
-          <a href="#">2</a>
+          <a href="#">Home2</a>
         </li>
         <li>
-          <a href="#">3</a>
+          <a href="#">Home3?</a>
         </li>
         <li>
-          <a href="#">4</a>
+          <a href="#">Home4!</a>
         </li>
         <li>
-          <a href="#">5</a>
-        </li>
-        <li>
-          <a href="#" >6</a>
+          <a href="#">Home5!?</a>
         </li>
       </ul>
     </div>
@@ -102,7 +99,6 @@
         </div>
         </section>
 
-        
         <!-- !Section 3 -->
    <section class="box-content">
      <div class="content">
