--- a/index.html
+++ b/index.html
@@ -65,16 +65,19 @@
           <a href="#">Home</a>
         </li>
         <li>
-          <a href="#">Home2</a>
+          <a href="#">Movies & Series</a>
         </li>
         <li>
-          <a href="#">Home3?</a>
+          <a href="#">Games & Cards</a>
         </li>
         <li>
-          <a href="#">Home4!</a>
+          <a href="#">Pokemon Finder</a>
         </li>
         <li>
-          <a href="#">Home5!?</a>
+          <a href="#">Pokedex</a>
+        </li>
+        <li>
+          <a href="#">About Us</a>
         </li>
       </ul>
     </div>
