--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <!-- !Loading Screen -->
 <div id="loader">
-  <img  class="loader-gif" src="Images/loading-gif.gif" alt="Loading Screen" />
+  <img  class="loader-gif" src="Images/logo1.gif" alt="Loading Screen" />
 </div>
 
 <!-- !Header -->
@@ -65,26 +65,34 @@
           <a href="#">Home</a>
         </li>
         <li>
+          <a href="#">Pokemon Finder</a>
+        </li>
+        <li>
           <a href="#">Movies & Series</a>
         </li>
         <li>
           <a href="#">Games & Cards</a>
         </li>
         <li>
-          <a href="#">Pokemon Finder</a>
-        </li>
-        <li>
-          <a href="#">Pokedex</a>
-        </li>
-        <li>
-          <a href="#">About Us</a>
-        </li>
-      </ul>
+          <a href="#">Games & Cards</a>
+        </li>  
+          <li>
+            <a href="#">About Us</a>
+          </li>
+        </ul>
     </div>
 
   </header>
 
   <main id="main">
+    
+
+    <!-- !Section 1 -->
+    <section class="head-content">
+      <div class="grid">
+        <img class="right-img" src="Images/Pikachu.png" alt="Pikachu">
+      </div> 
+      </section>
     
         <!-- !Section 2 -->
     <section class="box-content2">
