--- a/index.html
+++ b/index.html
@@ -89,8 +89,16 @@
 
     <!-- !Section 1 -->
     <section class="head-content">
-      <div class="grid">
-        <img class="right-img" src="Images/Pikachu.png" alt="Pikachu">
+      <div class="pokedex-grid">
+        <div class="left">
+          <p>1</p>
+        </div>
+        <div class="mid">
+          <p>2</p>
+        </div>
+        <div class="right">
+          <p>3</p>
+        </div>
       </div> 
       </section>
     
