scrollbar be GONE

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <title>Tannuki — Home</title>
 </head>
 
-<body onload="timer()">
+<body onload="timer()" class="body">
 
 <!-- !Loading Screen -->
 <div id="loader">
@@ -105,7 +105,7 @@
         <!-- !Section 2 -->
     <section class="box-content2">
          <div class="content2">
-           <div class="grid">  
+           <div class="grid">
            <div class="left-box2">
              <img src="Images/Pikachu.png" alt="Pictures" class="movie-img1">
              <img src="Images/Pikachu.png" alt="Pictures" class="movie-img2">
