--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <!-- !Loading Screen -->
 <div id="loader">
-  <img  class="loader-gif" src="Images/logo1.gif" alt="Loading Screen" />
+  <img  class="loader-gif" src="Images/loading-gif.gif" alt="Loading Screen" />
 </div>
 
 <!-- !Header -->
@@ -45,7 +45,7 @@
         <div class="left">
           <img class="gif">
           <a href=""><img class="logo" src="Images/logo-removebg-preview.png" alt="Logo"></a>
-          <h1>Pokoemon Mac and Cheese</h1>
+          <h1>Pokémon Mac and Cheese</h1>
           <a href="#"><button class="btn-all btn1">Knapp 1</button></a>
           <a href="#"><button class="btn-all btn2">knapp 2</button></a>
           
@@ -65,7 +65,7 @@
           <a href="#">Home</a>
         </li>
         <li>
-          <a href="#">Pokemon Finder</a>
+          <a href="#">Pokémon Finder</a>
         </li>
         <li>
           <a href="#">Movies & Series</a>
@@ -74,7 +74,7 @@
           <a href="#">Games & Cards</a>
         </li>
         <li>
-          <a href="#">Games & Cards</a>
+          <a href="#">Pokédex</a>
         </li>  
           <li>
             <a href="#">About Us</a>
