--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
   <link rel="stylesheet" href="Css/loading.css">
   <link rel="stylesheet" href="Css/header.css">
   <link rel="stylesheet" href="Css/head-content.css">
+  <link rel="stylesheet" href="Css/pokedex.css">
   <link rel="stylesheet" href="Css/box.css">
   <link rel="stylesheet" href="Css/footer.css">
 
 <!-- !Js -->
 <script defer src="loader.js"></script>
 <script defer src="header.js"></script>
+<script defer src="pokedex.js"></script>
 
   <!-- !Fonts -->
 <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -89,17 +91,9 @@
 
     <!-- !Section 1 -->
     <section class="head-content">
-      <div class="pokedex-grid">
-        <div class="left">
-          <p>1</p>
-        </div>
-        <div class="mid">
-          <p>2</p>
-        </div>
-        <div class="right">
-          <p>3</p>
-        </div>
-      </div> 
+      <h1 class="title">Pokedex</h1>
+      <div id="poke_container" class="poke-container"></div>
+      <h3 class="bread-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. At, assumenda repellendus reprehenderit neque aspernatur saepe accusantium recusandae ducimus officia adipisci! Sint perferendis adipisci, officiis provident cumque fugit necessitatibus totam doloremque.</h3>
       </section>
     
         <!-- !Section 2 -->
