--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <!-- !Css -->
   <link rel="stylesheet" href="bg.css">
   <link rel="stylesheet" href="Css/style.css">
+  <link rel="stylesheet" href="Css/animation.css">
   <link rel="stylesheet" href="Css/loading.css">
   <link rel="stylesheet" href="Css/header.css">
   <link rel="stylesheet" href="Css/head-content.css">
@@ -34,7 +35,7 @@
 
 <!-- !Loading Screen -->
 <div id="loader">
-  <img  class="loader-gif" src="Images/loading-gif.gif" alt="Loading Screen" />
+  <img  class="loader-gif" src="Images/logo1.gif" alt="Loading Screen" />
 </div>
 
 <!-- !Header -->
@@ -92,8 +93,7 @@
     <!-- !Section 1 -->
     <section class="head-content">
       <h1 class="title">Pokedex</h1>
-      <div id="poke_container" class="poke-container"></div>
-      <h3 class="bread-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. At, assumenda repellendus reprehenderit neque aspernatur saepe accusantium recusandae ducimus officia adipisci! Sint perferendis adipisci, officiis provident cumque fugit necessitatibus totam doloremque.</h3>
+      <div id="pokemon-container" class="pokemon-container"></div>
       </section>
     
         <!-- !Section 2 -->
@@ -106,7 +106,7 @@
              </div>
        <div class="right-box2">
            <h5 class="movie-header">Movies & Series</h5>
-           <p class="movie-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum sed natus accusamus, recusandae doloremque iure harum voluptatibus, ipsam fugit nihil voluptate saepe perferendis tenetur quo provident necessitatibus hic explicabo placeat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, dolores.</p>
+           <p class="movie-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum sed natus accusamus, recusandae doloremque iure harum voluptatibus, ipsam fugit nihil voluptate saepe perferendis tenetur quo provident necessitatibus hic explicabo placeat.</p>
          </div>
          </div>
         </div>
