--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <title>Tannuki — Home</title>
 </head>
 
-<body onload="timer()" class="body">
+<body onload="timer()" class="index-body">
 
 <!-- !Loading Screen -->
 <div id="loader">
@@ -93,6 +93,7 @@
     <!-- !Section 1 -->
     <section class="head-content">
       <h1 class="title">Pokedex</h1>
+      <h3 class="pokedex-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas sequi facilis ducimus aliquam accusamus soluta natus, dolorem ea deleniti. Facere, quas excepturi? Sunt repellat, quis iure laudantium adipisci soluta saepe!</h3>
       <div id="pokemon-container" class="pokemon-container"></div>
       </section>
     
