--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
 <!-- !Section 4 -->
 <section class="index-content">
     <div class="grid">
+
+      <input type="text" name="fname"><br><br>
       <img class="right-img" src="Images/Pikachu.png" alt="Pikachu">
     </div> 
     </section>
