--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                   alt="Logo"
               /></a>
               <h1>Pokémon Mac and Cheese</h1>
-              <a href="#"><button class="btn-all btn1">Knapp 1</button></a>
-              <a href="#"><button class="btn-all btn2">knapp 2</button></a>
+              <a href="#merch"><button class="btn-all btn1">Knapp 1</button></a>
+              <a href="#footer"><button class="btn-all btn2">knapp 2</button></a>
 
               <p>
                 Nulla rem suscipit similique quae consequatur esse voluptatem
@@ -95,18 +95,25 @@
     </header>
 
     <main id="main">
-<!-- !Furret walk -->
+      <!-- ?Pika för Space eller Ghost eller nåt -->
+      <!-- ?Pika för heaven -->
+      <!-- ?Normal type-->
+      <!-- ?Furret walk för gräss -->
+      <!-- ?Underground -->
+      <!-- ?Furret walk för Hellvetet -->
 
       <!-- !Section 1 -->
       <section class="index-content">
-        <h1 class="title">Pokedex</h1>
-        <h3 class="pokedex-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas sequi
-          facilis ducimus aliquam accusamus soluta natus, dolorem ea deleniti.
-          Facere, quas excepturi? Sunt repellat, quis iure laudantium adipisci
-          soluta saepe!
-        </h3>
-        <div id="pokemon-container" class="pokemon-container"></div>
+        <div class="content">
+          <h1 class="title">Pokedex</h1>
+          <p class="pokedex-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas sequi
+            facilis ducimus aliquam accusamus soluta natus, dolorem ea deleniti.
+            Facere, quas excepturi? Sunt repellat, quis iure laudantium adipisci
+            soluta saepe!
+          </p>
+          <div id="pokemon-container" class="pokemon-container"></div>
+        </div>
       </section>
       
       <!-- !Section 2 -->
@@ -132,7 +139,7 @@
       
       <!-- !Section 3 -->
       <section class="index-content">
-        <div class="content3">
+        <div class="content3" id="merch">
           <h5 class="merch-header">Merch</h5>
           <p class="merch-p">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum sed
