--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="Css/pokedex.css" />
     <link rel="stylesheet" href="Css/box.css" />
     <link rel="stylesheet" href="Css/footer.css" />
+    <link rel="stylesheet" href="Css/mediaquery.css" />
 
     <!-- !Js -->
     <script defer src="loader.js"></script>
@@ -43,7 +44,7 @@
     <!-- !Header -->
     <header class="header">
       <div class="animate-bottom">
-        <section class="index-content">
+        <section class="header-content">
           <div class="grid">
             <div class="left">
               <img class="gif" />
