cooming soon page

--- a/index.html
+++ b/index.html
@@ -74,22 +74,22 @@
         <ul>
           <button class="menu1">Menu</button>
           <li>
-            <a href="#">About Us</a>
+            <a href="soon.html">About Us</a>
           </li>
           <li>
-            <a href="#">Home</a>
+            <a href="soon.html">Home</a>
           </li>
           <li>
-            <a href="#">Pokédex</a>
+            <a href="soon.html">Pokédex</a>
           </li>
           <li>
-            <a href="#">Pokémon Battle Simulator</a>
+            <a href="soon.html">Pokémon Battle Simulator</a>
           </li>
           <li>
-            <a href="#">Games & Cards</a>
+            <a href="soon.html">Games & Cards</a>
           </li>
           <li>
-            <a href="#">Movies & Series</a>
+            <a href="soon.html">Movies & Series</a>
           </li>
         </ul>
       </div>
