--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
       <!-- ?Furret walk för gräss -->
       <!-- ?Underground -->
       <!-- ?Furret walk för Hellvetet -->
+      <!-- ! 2023: WTF ÄR det där för annteckningar... -->
 
       <!-- !Section 1 -->
       <section class="index-content">
